--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="node_modules/aframe/dist/aframe-master.js"></script>
+    <script src="/bundle.js"></script>
   </head>
   <body>
     <a-scene>
