--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <body>
     <a-scene>
+      <a-light id="light" type="directional" color="white" intensity="2" position="-10 5 2"></a-light>
       <a-box color="#CDCC00" width="1" height="1" position="0 2 -3"></a-box>
-      <a-sky id="sky" color="#AADDF0"></a-sky>
+      <a-sky id="sky" color="#009DCD"></a-sky>
     </a-scene>
   </body>
 </html>
