--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
   <a-scene>
     <a-plane position="0 0 0" rotation="-90 0 0" width="100" height="100" color="#0080AF"></a-plane>
-    <a-sphere position="2 1 -5" radius="1" color="#CDCC00"></a-sphere>
-    <a-box position="-2 1 -5" width="2" height="2" color="#CDCC00"></a-sphere>
+    <a-sphere move-around="moveX: 10; moveZ: -5" position="2 1 -5" radius="1" color="#CDCC00"></a-sphere>
+    <a-box move-around="moveY: 1" position="-2 1 -5" width="2" height="2" color="#CDCC00"></a-sphere>
   </a-scene>
 </body>
 
