working with assets

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 
 <body>
   <a-scene>
+    <a-assets>
+      <a-asset-item id="lego-model" src="assets/lego.obj"></a-asset-item>
+      <img id="logo" src="assets/logo.jpg" />
+      <img id="background" src="https://upload.wikimedia.org/wikipedia/commons/8/89/Langkawi_Sky_Bridge_Photosphere.jpg" />
+    </a-assets>
     <a-plane position="0 0 0" rotation="-90 0 0" width="100" height="100" color="#0080AF"></a-plane>
-    <a-sphere move-around="moveX: 10; moveZ: -5" position="2 1 -5" radius="1" color="#CDCC00"></a-sphere>
-    <a-box move-around="moveY: 1" position="-2 1 -5" width="2" height="2" color="#CDCC00"></a-sphere>
+    <a-obj-model src="#lego-model" material="color: #CDCC00" position="2 1 -5" scale="0.05 0.05 0.05" move-around="moveX: 10; moveZ: -5"></a-obj-model>
+    <a-box move-around="moveY: 1" position="-2 1 -5" width="2" height="2" material="src: #logo"></a-box>
+    <a-sky src="#background"></a-sky> 
   </a-scene>
 </body>
 
