--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <body>
   <a-scene>
     <a-assets>
-      <a-asset-item id="lego-model" src="assets/lego.obj"></a-asset-item>
-      <img id="logo" src="assets/logo.jpg" />
-      <img id="background" src="https://upload.wikimedia.org/wikipedia/commons/8/89/Langkawi_Sky_Bridge_Photosphere.jpg" />
+      <img id="strazzullo" src="assets/francesco-strazzullo.jpg">
+      <img id="violini" src="assets/alessandro-violini.jpg">
     </a-assets>
-    <a-plane position="0 0 0" rotation="-90 0 0" width="100" height="100" color="#0080AF"></a-plane>
-    <a-obj-model src="#lego-model" material="color: #CDCC00" position="2 1 -5" scale="0.05 0.05 0.05" move-around="moveX: 10; moveZ: -5"></a-obj-model>
-    <a-box move-around="moveY: 1" position="-2 1 -5" width="2" height="2" material="src: #logo"></a-box>
-    <a-sky src="#background"></a-sky> 
+    <a-sky color="#0080AF"></a-sky>
+    <a-plane exer="strazzullo"></a-plane>
+    <a-plane exer="violini"></a-plane>
   </a-scene>
 </body>
 
