added all exers foto

--- a/index.html
+++ b/index.html
@@ -5,10 +5,34 @@
     <a-assets>
       <img id="strazzullo" src="assets/francesco-strazzullo.jpg">
       <img id="violini" src="assets/alessandro-violini.jpg">
+      <img id="dellava" src="assets/antonio-dell-ava.jpg">
+      <img id="dluconi" src="assets/daniele-luconi.jpg">
+      <img id="massacci" src="assets/lorenzo-massacci.jpg">
+      <img id="pomili" src="assets/lorenzo-pomili.jpg">
+      <img id="mattia" src="assets/mattia-ex.jpg">
+      <img id="focanti" src="assets/michele-focanti.jpg">
+      <img id="mluconi" src="assets/michele-luconi.jpg">
+      <img id="vesprini" src="assets/ramona-vesprini.jpg">
+      <img id="tosi" src="assets/severio-ex02.jpg">
+      <img id="morresi" src="assets/silvia-morresi.jpg">
+      <img id="ceccacci" src="assets/stefania-ceccacci.jpg">
+      <img id="mandolini" src="assets/giorgio-mandolini.jpg">
     </a-assets>
     <a-sky color="#0080AF"></a-sky>
-    <a-plane exer="strazzullo"></a-plane>
     <a-plane exer="violini"></a-plane>
+    <a-plane exer="dellava"></a-plane>
+    <a-plane exer="dluconi"></a-plane>
+    <a-plane exer="strazzullo"></a-plane>
+    <a-plane exer="massacci"></a-plane>
+    <a-plane exer="pomili"></a-plane>
+    <a-plane exer="mattia"></a-plane>
+    <a-plane exer="focanti"></a-plane>
+    <a-plane exer="mluconi"></a-plane>
+    <a-plane exer="vesprini"></a-plane>
+    <a-plane exer="tosi"></a-plane>
+    <a-plane exer="morresi"></a-plane>
+    <a-plane exer="ceccacci"></a-plane>
+    <a-plane exer="mandolini"></a-plane>
   </a-scene>
 </body>
 
