Added on click handler

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <img id="dluconi" src="assets/daniele-luconi.jpg">
       <img id="massacci" src="assets/lorenzo-massacci.jpg">
       <img id="pomili" src="assets/lorenzo-pomili.jpg">
-      <img id="mattia" src="assets/mattia-ex.jpg">
+      <img id="deluca" src="assets/mattia-ex.jpg">
       <img id="focanti" src="assets/michele-focanti.jpg">
       <img id="mluconi" src="assets/michele-luconi.jpg">
       <img id="vesprini" src="assets/ramona-vesprini.jpg">
@@ -25,7 +25,7 @@
     <a-plane exer="strazzullo"></a-plane>
     <a-plane exer="massacci"></a-plane>
     <a-plane exer="pomili"></a-plane>
-    <a-plane exer="mattia"></a-plane>
+    <a-plane exer="deluca"></a-plane>
     <a-plane exer="focanti"></a-plane>
     <a-plane exer="mluconi"></a-plane>
     <a-plane exer="vesprini"></a-plane>
@@ -33,6 +33,9 @@
     <a-plane exer="morresi"></a-plane>
     <a-plane exer="ceccacci"></a-plane>
     <a-plane exer="mandolini"></a-plane>
+     <a-entity camera look-controls>
+        <a-cursor fuse="true" raycaster="objects: [exer]"></a-cursor>
+      </a-entity>
   </a-scene>
 </body>
 
